fix invisible alternative part on desktop size

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -32,3 +32,7 @@ body {
     min-height: 2000px;
     padding-top: 70px;
 }
+
+@-moz-document url-prefix() {
+    fieldset { display: table-cell; }
+}
